--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 language: cpp
 before_install:
 - sudo apt-get update -qq
-- sudo apt-get install -qq libncurses-dev doxygen graphviz
+- sudo apt-get install -qq libncurses-dev doxygen graphviz libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev
 compiler:
  - clang
  - gcc
