--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: cpp
 before_install:
+- sudo add-apt-repository -y ppa:team-xbmc/ppa
 - sudo apt-get update -qq
 - sudo apt-get install -qq libncurses-dev doxygen graphviz libsdl2-dev libsdl2-image-dev libsdl2-ttf-dev
 compiler:
